# mks_wifi_clone

./: CMakeLists.txt  Makefile  include.list  index_html.h
driver/: uart.c
hardware/GerberX2/: main-macro.APR_LIB  main.EXTREP  main.REP  main.RUL  main.apr  main_Copper_Signal_Top.gbr  main_PTH_Drill.gbr  main_Profile.gbr
hardware/GerberX2/__Previews/: main.REPPreview
hardware/NC Drill/: main.DRR  main.LDP  main.TXT
hardware/NC Drill/__Previews/: main.LDPPreview
src/: bridge.c  bridge.h  eeprom.c  eeprom.h  http_server.c  http_server.h  loop.c  loop.h  ntp.c  ntp.h  uart_host.c  uart_host.h  user.c  user_config.h  wifi.c  wifi.h
